<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="165dp"
        android:layout_height="147dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.828">

        <Switch
            android:id="@+id/fragment_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="launchMainFragment"
            android:text="@string/fragment_switch" />

        <Switch
            android:id="@+id/compass_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="launchCompassActivity"
            android:text="@string/compass_switch" />

        <Switch
            android:id="@+id/gyroscope_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="launchGyroscopeActivity"
            android:text="@string/gyroscope_switch" />

        <Switch
            android:id="@+id/magnetic_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="launchMagneticFieldActivity"
            android:text="@string/magnetic_switch" />

        <Switch
            android:id="@+id/accelerometer_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="launchAccelerometerActivity"
            android:text="@string/accelerometer_switch" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>